--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "QuickVoice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.6.3",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "prettier": "^3.1.1"
-  }
+	"dependencies": {
+		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
+		"express": "^4.18.2",
+		"express-rate-limit": "^7.1.5",
+		"express-session": "^1.17.3",
+		"socket.io": "^4.7.2"
+	},
+	"devDependencies": {
+		"eslint": "^8.56.0",
+		"prettier": "^3.1.1"
+	}
 }
