--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"express": "^4.18.2",
 		"express-rate-limit": "^7.1.5",
 		"express-session": "^1.17.3",
+		"googlethis": "^1.8.0",
 		"socket.io": "^4.7.2"
 	},
 	"devDependencies": {
